--- a/app/site/index.html
+++ b/app/site/index.html
@@ -25,7 +25,7 @@
         MMMMMMMMMMMMMMMMMMM
         MMMMMMMMMMMMMMMMMMM      ____________________________
        MMMMMMMMMMMMMMMMMMMMM    |                            |
-      MMMMMMMMMMMMMMMMMMMMMMM   | Keep it logically awesomem! |
+      MMMMMMMMMMMMMMMMMMMMMMM   | Keep it logically awesome, |
      MMMMMMMMMMMMMMMMMMMMMMMM   |_   ________________________|
      MMMM::- -:::::::- -::MMMM    |/
       MM~:~ 00~:::::~ 00~:~MM
